--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ library:
 ghc-options: -Wall -Werror
 
 default-extensions:
+  - GeneralizedNewtypeDeriving
   - LambdaCase
   - TypeFamilies
   - TypeOperators
